--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 ---
 layout: page
-title: My portfolio
-subtitle: This is where I will tell my friends way too much about me
+title: Hi, I'm Johan
+subtitle: R-Shiny Expert / Software Tool Builder / Extreme Traveller
 use-site-title: true
+meta-title: "Dean Attali - R-Shiny consultant"
+meta-description: "Meta description"
 ---
 
 <div class="posts-list">
