--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@ subtitle: R-Shiny Expert / Software Tool Builder / Extreme Traveller
 use-site-title: true
 meta-title: "Dean Attali - R-Shiny consultant"
 meta-description: "Meta description"
+bigimg:
+  - "/img/big-imgs/costa-rica-house.jpeg" : "Montezuma, Costa Rica (2011)"
+  - "/img/big-imgs/grouse-grind.jpeg" : "Vancouver, Canada (2014)"
+  - "/img/big-imgs/hawaii1.jpeg" : "Kauai, HI, USA (2014)"
 ---
 
 <div class="posts-list">
