--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 ---
 layout: page
 title: Hi, I'm Johan
-subtitle: R-Shiny Expert / Software Tool Builder / Extreme Traveller
-use-site-title: true
-meta-title: "Dean Attali - R-Shiny consultant"
+subtitle: Creative Programmer / AI Enthusiast
+meta-title: "Johan Gras - Research student"
 meta-description: "Meta description"
 bigimg:
   - "/img/big-imgs/costa-rica-house.jpeg" : "Montezuma, Costa Rica (2011)"
