--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Hi, I'm Johan
-subtitle: Aspiring Computer Scientist / Programmer / AI Enthusiast
+subtitle: Programmer / Aspiring Computer Scientist / AI Enthusiast
 meta-title: "Johan Gras - Research student"
 meta-description: "Meta description"
 bigimg:
