--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,10 @@ css: "/css/aboutme.css"
 <h1 id="contact">Contact</h1>
 
 
-<p>You can <a href="mailto:dean@attalitech.com?subject=Hello from deanattali.com">email me</a> or find me <a href="https://twitter.com/daattali">on Twitter</a> if you want to get in touch. As I said, I love meeting new people so don't hesitate to send a message!</p>
-<p>My fulltime job is consulting work in R and Shiny, so feel free to get in touch if you want to discuss potential projects, your Shiny needs, or need any paid help.</p>
-<p>If you'd like to set up a meeting with me, <a href="https://calendly.com/attalitech/meeting">click here to schedule a meeting</a> based on your availability.</p>
+<p>You can <a href="mailto:johan-gras@outlook.com?subject=Hello from johan-gras.github.io">email me</a> or find me <a href="https://twitter.com/pseudo">on Twitter</a> if you want to get in touch. I love meeting new people so don't hesitate to send a message!</p>
+<!--<p>My fulltime job is consulting work in R and Shiny, so feel free to get in touch if you want to discuss potential projects, your Shiny needs, or need any paid help.</p>-->
 
-<form action="https://formspree.io/dean@attalitech.com" method="POST" class="form" id="contact-form">
+<form action="https://formspree.io/johan-gras@outlook.com" method="POST" class="form" id="contact-form">
   <p>You can also send me a quick message using the form below:</p>
   <div class="row">
     <div class="col-xs-6">
@@ -23,12 +22,9 @@ css: "/css/aboutme.css"
       <input type="text" name="name" class="form-control input-lg" placeholder="Name" title="Name">
     </div>
   </div>
-  <input type="hidden" name="_subject" value="New submission from deanattali.com">
   <textarea type="text" name="content" class="form-control input-lg" placeholder="Message" title="Message" required="required" rows="3"></textarea>
   <input type="text" name="_gotcha" style="display:none">
   <input type="hidden" name="_next" value="./aboutme?message=Your message was sent successfully, thanks!" />
-  
-  <div style="font-size: 12px; margin: -10px 0 10px;">Please do not use this form to send me full code samples or ask me to fix your app for free. Due to the volume of questions I receive I unfortuantely cannot offer free support.</div>
   
   <button type="submit" class="btn btn-lg btn-primary">Submit</button>
 </form>
