--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@ css: "/css/aboutme.css"
   </div>
   <textarea type="text" name="content" class="form-control input-lg" placeholder="Message" title="Message" required="required" rows="3"></textarea>
   <input type="text" name="_gotcha" style="display:none">
-  <input type="hidden" name="_next" value="./aboutme?message=Your message was sent successfully, thanks!" />
+  <input type="hidden" name="_next" value="./contact?message=Your message was sent successfully, thanks!" />
   
   <button type="submit" class="btn btn-lg btn-primary">Submit</button>
 </form>
