--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,7 @@ css: "/css/aboutme.css"
 <div id="aboutme-section">
 
 <p class="about-text">
+<!--
 <span class="fa fa-briefcase about-icon"></span>
 Currently an <a href="/shiny"><strong>R-Shiny consultant</strong></a>. Previously worked as a <strong>software engineer</strong> (Google, IBM, <a href="https://tagged.com" target="_blank">Tagged.com</a>) and <strong>web
 developer</strong> in tiny startups (<a href="https://wish.com" target="_blank">Wish.com</a>,
@@ -15,19 +16,21 @@ developer</strong> in tiny startups (<a href="https://wish.com" target="_blank">
 <a href="http://glittr.com" target="_blank">glittr.com</a>,
 <a href="https://web.archive.org/web/20120309093005/https://www.jauntr.com/" target="_blank">jauntr.com</a>).
 </p>
+-->
+
+<!--add master project link-->
 
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
-Obtained my MSc in <strong>Bioinformatics</strong> from the University of British Columbia (supervised by the amazing
-<a href="https://twitter.com/JennyBryan" target="_blank">Jenny Bryan</a>) and my Bachelor of <strong>Computer Science</strong> from the
-University of Waterloo, Canada. My masters thesis project involved
-<a href="https://github.com/daattali/ddpcr" target="_blank">developing computational methods to automatically analyze
-droplet digital PCR</a> data.
+Obtained my MSc in <strong>Artificial Intelligence</strong> from the University of Cergy-Pontoise, France and my Bachelor of <strong>Computer Science</strong> from the
+University of Paris-Saclay. My master's research project involved solving a jigsaw puzzle using a model-based reinforcement algorithm.
 </p>
 
 <p class="about-text">
 <span class="fa fa-code about-icon"></span>
-I enjoy writing <strong>useful & reusable software tools</strong> to help others &mdash; check out <a href="/projects">my projects</a>. In the past several years I've become an experienced R useR and an expert in R-Shiny.
+<strong>I love writing amazing & challenging pieces of software</strong> &mdash; check out <a href="/projects">my projects</a>.
+My journey started at 13, building a video game in C.
+And here we are, 10 years later, I'm now deeply focused on <strong>implementing exciting deep learning algorithms</strong> (in Python for sure)!
 </p>
 
 <p class="about-text">
