--- a/aboutme.html
+++ b/aboutme.html
@@ -28,27 +28,25 @@ University of Paris-Saclay. My master's research project involved solving a jigs
 
 <p class="about-text">
 <span class="fa fa-code about-icon"></span>
-<strong>I love writing amazing & challenging pieces of software</strong> &mdash; check out <a href="/projects">my projects</a>.
+I love writing <strong>amazing & challenging pieces of software</strong> &mdash; check out <a href="/projects">my projects</a>.
 My journey started at 13, building a video game in C.
-And here we are, 10 years later, I'm now deeply focused on <strong>implementing exciting deep learning algorithms</strong> (in Python for sure)!
+Here we are 10 years later, I'm now deeply focused on <strong>implementing exciting deep learning algorithms</strong>!
 </p>
 
 <p class="about-text">
 <span class="fa fa-heart about-icon"></span>
-I'm addicted to soccer, <strong>travelling</strong> at any given (and non-given) moment, getting into philosophical debates,
-and meeting new people :) 
+I'm addicted to demanding sports (Gym, Parkour, Obstacle Race, Ski and much more), travelling, <a href="https://en.wikipedia.org/wiki/Comfort_zone">trying new things</a>,
+interacting with people and also enjoying every little pleasure of life :)
 </p>
 
 <p class="about-text">
 <span class="fa fa-file-text-o about-icon"></span>
-The <strong><a href="/projects">projects</a></strong> page is a nice place to see some of my work, but you can also view my (somewhat outdated) <a href="/resume">resume</a>. 
+The <strong><a href="/projects">projects</a></strong> page is a nice place to see some of my work, but if you prefer you can also checkout my <a href="/resume">resume</a>. 
 </p>
 
 <p class="about-text">
 <span class="fa fa-globe about-icon"></span>
-Grew up in <i>Tel Aviv, Israel</i>; moved to <i>Toronto, Canada</i> during my teens; worked in <i>San Francisco</i> after undergrad; crossed the border again to <i>Vancouver, Canada</i> for grad school; spent many months in other countries backpacking; returned to <i>Toronto</i> in 2017.
+Born and raised in the <i>Paris area</i>; spend the last 6 months in <i>Montreal, Canada</i> for my Master internship; spend months travelling in Europe and North America.
 </p>
-
-<p>I also have <a href="https://deanat78.wordpress.com/">an old blog</a>, mostly from high school and some old travelling trips, that I'll leave here just because I want to have a reference to it somewhere.</p>
 
 </div>
