--- a/aboutme.html
+++ b/aboutme.html
@@ -23,20 +23,20 @@ developer</strong> in tiny startups (<a href="https://wish.com" target="_blank">
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
 Obtained my MSc in <strong>Artificial Intelligence</strong> from the University of Cergy-Pontoise, France and my Bachelor of <strong>Computer Science</strong> from the
-University of Paris-Saclay. My master's research project involved solving a jigsaw puzzle using a model-based reinforcement algorithm.
+University of Paris-Saclay. My master's research project involved <a href="">solving a jigsaw puzzle using a model-based reinforcement algorithm</a>
 </p>
 
 <p class="about-text">
 <span class="fa fa-code about-icon"></span>
 I love writing <strong>amazing & challenging pieces of software</strong> &mdash; check out <a href="/projects">my projects</a>.
 My journey started at 13, building a video game in C.
-Here we are 10 years later, I'm now deeply focused on <strong>implementing exciting deep learning algorithms</strong>!
+Here we are 10 years later, I'm now deeply focused on <strong>implementing exciting deep learning algorithms!</strong>
 </p>
 
 <p class="about-text">
 <span class="fa fa-heart about-icon"></span>
-I'm addicted to demanding sports (Gym, Parkour, Obstacle Race, Ski and much more), travelling, <a href="https://en.wikipedia.org/wiki/Comfort_zone">trying new things</a>,
-interacting with people and also enjoying every little pleasure of life :)
+I'm addicted to demanding sports (Gym, Parkour, Obstacle Race, Ski and more), travelling, interacting with people,
+ <a href="https://en.wikipedia.org/wiki/Comfort_zone">trying new things</a> and not to forget enjoying this life on earth :)
 </p>
 
 <p class="about-text">
@@ -46,7 +46,7 @@ The <strong><a href="/projects">projects</a></strong> page is a nice place to se
 
 <p class="about-text">
 <span class="fa fa-globe about-icon"></span>
-Born and raised in the <i>Paris area</i>; spend the last 6 months in <i>Montreal, Canada</i> for my Master internship; spend months travelling in Europe and North America.
+Born and raised in the <i>Paris area</i>; spend the last 6 months in <i>Montreal, Canada</i> for my Master internship; spend months travelling in <i>Europe</i> and <i>North America</i>.
 </p>
 
 </div>
