--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: About me
-subtitle: "Or: why you'd want to go on a date with me"
+subtitle: "Or: why <strong>efefzeffezfuiiuh</strong>'d want to go on a date with me"
 css: "/css/aboutme.css"
 ---
 
@@ -23,14 +23,14 @@ developer</strong> in tiny startups (<a href="https://wish.com" target="_blank">
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
 Obtained my MSc in <strong>Artificial Intelligence</strong> from the University of Cergy-Pontoise, France and my Bachelor of <strong>Computer Science</strong> from the
-University of Paris-Saclay. My master's research project involved <a href="">solving a jigsaw puzzle using a model-based reinforcement algorithm</a>
+University of Paris-Saclay. My master's project involved <a href="">solving a jigsaw puzzle using a model-based reinforcement learning algorithm</a>
 </p>
 
 <p class="about-text">
 <span class="fa fa-code about-icon"></span>
 I love writing <strong>amazing & challenging pieces of software</strong> &mdash; check out <a href="/projects">my projects</a>.
 My journey started at 13, building a video game in C.
-Here we are 10 years later, I'm now deeply focused on <strong>implementing exciting deep learning algorithms!</strong>
+Here we are 10 years later, I'm now deeply focused on implementing <strong>exciting deep learning algorithms!</strong>
 </p>
 
 <p class="about-text">
