--- a/aboutme.html
+++ b/aboutme.html
@@ -1,14 +1,14 @@
 ---
 layout: page
 title: About me
-subtitle: "Or: why <strong>efefzeffezfuiiuh</strong>'d want to go on a date with me"
+subtitle: "Or: why you <strike>would</strike> should hire me"
 css: "/css/aboutme.css"
 ---
 
 <div id="aboutme-section">
 
 <p class="about-text">
-<!--
+
 <span class="fa fa-briefcase about-icon"></span>
 Currently an <a href="/shiny"><strong>R-Shiny consultant</strong></a>. Previously worked as a <strong>software engineer</strong> (Google, IBM, <a href="https://tagged.com" target="_blank">Tagged.com</a>) and <strong>web
 developer</strong> in tiny startups (<a href="https://wish.com" target="_blank">Wish.com</a>,
@@ -16,9 +16,6 @@ developer</strong> in tiny startups (<a href="https://wish.com" target="_blank">
 <a href="http://glittr.com" target="_blank">glittr.com</a>,
 <a href="https://web.archive.org/web/20120309093005/https://www.jauntr.com/" target="_blank">jauntr.com</a>).
 </p>
--->
-
-<!--add master project link-->
 
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
