--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@ css: "/css/aboutme.css"
 <p class="about-text">
 
 <span class="fa fa-briefcase about-icon"></span>
-Previously interned at <a href="https://www.thalesgroup.com/">Thales</a>, first as a <strong>software engineer</strong> and latter on as <strong>research scientist</strong>.
+Previously interned at <a href="https://www.thalesgroup.com/">Thales</a> (a French multinational in the aerospatial and defense industry), first as a <strong>software engineer</strong> and latter on as <strong>research scientist</strong>.
 </p>
 
 <p class="about-text">
