--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: About me
-subtitle: "Or: why you <strike>would</strike> should hire me"
+subtitle: "Or: why I am a good fit for you"
 css: "/css/aboutme.css"
 ---
 
@@ -10,13 +10,13 @@ css: "/css/aboutme.css"
 <p class="about-text">
 
 <span class="fa fa-briefcase about-icon"></span>
-Previously interned at <a href="https://www.thalesgroup.com/">Thales</a> (a French multinational in the aerospatial and defense industry), first as a <strong>software engineer</strong> and latter on as <strong>research scientist</strong>.
+Previously interned at <a href="https://www.thalesgroup.com/">Thales</a> (a French multinational in the aerospatial and defense industry), first as a <strong>software engineer</strong> and later as <strong>ML research scientist</strong>.
 </p>
 
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
 Obtained my MSc in <strong>Artificial Intelligence</strong> from the University of Cergy-Pontoise, France and my Bachelor of <strong>Computer Science</strong> from the
-University of Paris-Saclay. My master's project involved <a href="">solving a jigsaw puzzle using a model-based reinforcement learning algorithm</a>
+University of Paris-Saclay. My master's project involved <a href="">solving a jigsaw puzzle using a model-based reinforcement learning algorithm</a>.
 </p>
 
 <p class="about-text">
@@ -39,7 +39,7 @@ The <strong><a href="/projects">projects</a></strong> page is a nice place to se
 
 <p class="about-text">
 <span class="fa fa-globe about-icon"></span>
-Born and raised in the <i>Paris area</i>; spend the last 6 months in <i>Montreal, Canada</i> for my Master internship; spend months travelling in <i>Europe</i> and <i>North America</i>.
+Born and raised in the <i>Paris area</i>; lived 6 months in <i>Montreal, Canada</i> for my Master internship; spend months travelling in <i>Europe</i> and <i>North America</i>.
 </p>
 
 </div>
