--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,10 @@ css: "/css/aboutme.css"
 ---
 
 <div id="contactme-section">
-<p>You can either <a href="mailto:johan-gras@outlook.com?subject=Hello from johan-gras.github.io">email me</a>, <a href="https://www.linkedin.com/in/johan-gras/">on Linkedin</a>
-  or find me <a href="https://twitter.com/gras_johan">on Twitter</a> if you want to get in touch. I would love to help so don't hesitate to send a message!</p>
-<p>My fulltime job is consulting work in R and Shiny, so feel free to get in touch if you want to discuss potential projects, your Shiny needs, or need any paid help.</p>
+<p>You can either <a href="mailto:johan-gras@outlook.com?subject=Hello from johan-gras.github.io">email me</a>, find me <a href="https://www.linkedin.com/in/johan-gras/">on Linkedin</a>
+  or <a href="https://twitter.com/gras_johan">on Twitter</a> if you want to get in touch. I would love to help so don't hesitate to send a message!</p>
+
+<p>I'm currently looking for a job in the field of Machine Learning, so feel free to get in touch if you are looking for someone to fill your needs.</p>
 
 <form action="https://formspree.io/johan-gras@outlook.com" method="POST" class="form" id="contact-form">
   <p>You can also send me a quick message using the form below:</p>
