--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 ---
 layout: page
-title: Hi, I'm Johan
+title: Hi, I'm Johan.
 subtitle: Programmer / Aspiring Computer Scientist / AI Enthusiast
 meta-title: "Johan Gras"
 meta-description: "Meta description"
+css: "/css/aboutme.css"
 bigimg:
   - "/img/big-imgs/costa-rica-house.jpeg" : "Montezuma, Costa Rica (2011)"
   - "/img/big-imgs/grouse-grind.jpeg" : "Vancouver, Canada (2014)"
