--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Hi, I'm Johan. Let me introduce myself :)
-subtitle: Programmer by Heart / Deep Learner by Destinity / Research Engineer in my Crystal Ball 
+subtitle: Programmer by Heart / Deep Learner through the Journey / Research Engineer in my Crystal Ball 
 
 meta-title: "Johan Gras"
 meta-description: "Meta description"
