--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Hi, I'm Johan. Let me introduce myself :)
-subtitle: Programmer by Heart / Deep Learner through the Journey / Research Engineer in my Crystal Ball 
+title: Hi, I'm Johan
+subtitle: Programmer by Heart / Deep Learner through my Journey / Research Engineer in my Crystal Ball 
 
 meta-title: "Johan Gras"
 meta-description: "Meta description"
@@ -11,6 +11,9 @@ bigimg:
   - "/img/big-imgs/grouse-grind.jpeg" : "Vancouver, Canada (2014)"
   - "/img/big-imgs/hawaii1.jpeg" : "Kauai, HI, USA (2014)"
 ---
+<!--  subtitle: Programmer / Aspiring Computer Scientist / AI Enthusiast
+
+Let me introduce you...-->
 
 <div id="aboutme-section">
 
