--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Hi, I'm Johan
-subtitle: Programmer by Heart / Deep Learner through my Journey / Research Engineer in my Crystal Ball 
+subtitle: Programmer by Heart / Deep Learner through the Journey / Research Engineer in the Crystal Ball
 
 meta-title: "Johan Gras"
 meta-description: "Meta description"
