--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Hi, I'm Johan
-subtitle: Programmer by Heart / Deep Learner through the Journey / Research Engineer in the Crystal Ball
+subtitle: Developper / Dreamer / Deep Learner
 
 meta-title: "Johan Gras"
 meta-description: "Meta description"
@@ -54,7 +54,6 @@ Let me introduce you...-->
   
   </div>
   
-
 <!--
 <div class="posts-list">
   {% for post in paginator.posts %}
