--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@ meta-title: "Johan Gras"
 meta-description: "Meta description"
 css: "/css/aboutme.css"
 bigimg:
-  - "/img/big-imgs/costa-rica-house.jpeg" : "Montezuma, Costa Rica (2011)"
-  - "/img/big-imgs/grouse-grind.jpeg" : "Vancouver, Canada (2014)"
-  - "/img/big-imgs/hawaii1.jpeg" : "Kauai, HI, USA (2014)"
+  - "/img/big-imgs/croatia-krka.jpg" : "Krka National Park, Croatia (2018)"
 ---
 <!--  subtitle: Programmer / Aspiring Computer Scientist / AI Enthusiast
+  subtitle: Programmer by Heart / Deep Learner through the Journey / Research Engineer in the Crystal Ball
 
 Let me introduce you...-->
 
