--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ meta-description: "Meta description"
 css: "/css/aboutme.css"
 bigimg:
   - "/img/big-imgs/croatia-krka.jpg" : "Krka National Park, Croatia (2018)"
+  - "/img/big-imgs/croatia-sun.jpg" : "Enjoying the sun in Croatia (2018)"
+  - "/img/big-imgs/croatia-korcula.jpg" : "Korčula island, Croatia (2018)"
 ---
 <!--  subtitle: Programmer / Aspiring Computer Scientist / AI Enthusiast
   subtitle: Programmer by Heart / Deep Learner through the Journey / Research Engineer in the Crystal Ball
