--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@ bigimg:
   - "/img/big-imgs/croatia-krka.jpg" : "Krka National Park, Croatia (2018)"
   - "/img/big-imgs/croatia-sun.jpg" : "Enjoying the sun in Croatia (2018)"
   - "/img/big-imgs/croatia-korcula.jpg" : "Korčula island, Croatia (2018)"
+  - "/img/big-imgs/quebec-cantons.jpg" : "Cantons de l'Est, QC, Canada (2019)"
+  - "/img/big-imgs/quebec-cantons2.jpg" : "Cantons de l'Est, QC, Canada (2019)"
+  - "/img/big-imgs/quebec-montreal.jpg" : "Montreal, QC, Canada (2019)"
+  - "/img/big-imgs/quebec-montreal2.jpg" : "Montreal, QC, Canada (2019)"
+  - "/img/big-imgs/quebec-quebec.jpg" : "Quebec, QC, Canada (2019)"
 ---
 <!--  subtitle: Programmer / Aspiring Computer Scientist / AI Enthusiast
   subtitle: Programmer by Heart / Deep Learner through the Journey / Research Engineer in the Crystal Ball
