--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ css: "/css/aboutme.css"
 bigimg:
   - "/img/big-imgs/montenegro.jpg" : "Montenegro (2016)"
   - "/img/big-imgs/montenegro2.jpg" : "Montenegro (2016)"
-  - "/img/big-imgs/france-ile-de-re.jpg" : "Île de Ré, France (2017)"
+  - "/img/big-imgs/france-smth.jpg" : "Smth, France (2017)"
   - "/img/big-imgs/france-beynes.jpg" : "My town, Beynes, France (2017)"
   - "/img/big-imgs/croatia-krka.jpg" : "Krka National Park, Croatia (2018)"
   - "/img/big-imgs/croatia-sun.jpg" : "Enjoying the sun in Croatia (2018)"
