--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@ css: "/css/aboutme.css"
 bigimg:
   - "/img/big-imgs/montenegro.jpg" : "Montenegro (2016)"
   - "/img/big-imgs/montenegro2.jpg" : "Montenegro (2016)"
-  - "/img/big-imgs/france-smth.jpg" : "Smth, France (2017)"
   - "/img/big-imgs/france-beynes.jpg" : "My town, Beynes, France (2017)"
   - "/img/big-imgs/croatia-krka.jpg" : "Krka National Park, Croatia (2018)"
   - "/img/big-imgs/croatia-sun.jpg" : "Enjoying the sun in Croatia (2018)"
-  - "/img/big-imgs/croatia-korcula.jpg" : "Korčula island, Croatia (2018)"
+  - "/img/big-imgs/croatia-korcula.jpg" : "Korčula Island, Croatia (2018)"
   - "/img/big-imgs/quebec-cantons.jpg" : "Cantons de l'Est, QC, Canada (2019)"
   - "/img/big-imgs/quebec-cantons2.jpg" : "Cantons de l'Est, QC, Canada (2019)"
   - "/img/big-imgs/quebec-montreal.jpg" : "Montreal, QC, Canada (2019)"
