--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ bigimg:
   - "/img/big-imgs/quebec-montreal.jpg" : "Montreal, QC, Canada (2019)"
   - "/img/big-imgs/quebec-montreal2.jpg" : "Montreal, QC, Canada (2019)"
   - "/img/big-imgs/quebec-quebec.jpg" : "Quebec, QC, Canada (2019)"
+  - "/img/big-imgs/quebec-park.jpg" : "Quebec, QC, Canada (2019)"
 ---
 <!--  subtitle: Programmer / Aspiring Computer Scientist / AI Enthusiast
   subtitle: Programmer by Heart / Deep Learner through the Journey / Research Engineer in the Crystal Ball
