--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ bigimg:
   - "/img/big-imgs/quebec-montreal2.jpg" : "Montreal, QC, Canada (2019)"
   - "/img/big-imgs/quebec-quebec.jpg" : "Quebec, QC, Canada (2019)"
   - "/img/big-imgs/quebec-park4.jpg" : "Quebec, QC, Canada (2019)"
-  - "/img/big-imgs/quebec-park2.jpg" : "Quebec, QC, Canada (2019)"
   - "/img/big-imgs/quebec-park3.jpg" : "Quebec, QC, Canada (2019)"
-  - "/img/big-imgs/quebec-mauricie.jpg" : "Quebec, QC, Canada (2019)"
+  - "/img/big-imgs/quebec-park2.jpg" : "Quebec, QC, Canada (2019)"
+  - "/img/big-imgs/quebec-mauricie.jpg" : "Mauricie National Park, QC, Canada (2019)"
 ---
 <!--  subtitle: Programmer / Aspiring Computer Scientist / AI Enthusiast
   subtitle: Programmer by Heart / Deep Learner through the Journey / Research Engineer in the Crystal Ball
