--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@ bigimg:
   - "/img/big-imgs/croatia-krka.jpg" : "Krka National Park, Croatia (2018)"
   - "/img/big-imgs/croatia-sun.jpg" : "Enjoying the sun in Croatia (2018)"
   - "/img/big-imgs/croatia-korcula.jpg" : "Korčula Island, Croatia (2018)"
+  - "/img/big-imgs/germany-berlin.jpg" : "Berlin, Germany (2019)"
   - "/img/big-imgs/quebec-cantons.jpg" : "Cantons de l'Est, QC, Canada (2019)"
   - "/img/big-imgs/quebec-cantons2.jpg" : "Cantons de l'Est, QC, Canada (2019)"
   - "/img/big-imgs/quebec-montreal.jpg" : "Montreal, QC, Canada (2019)"
   - "/img/big-imgs/quebec-montreal2.jpg" : "Montreal, QC, Canada (2019)"
+  - "/img/big-imgs/quebec-montreal3.jpg" : "Montreal, QC, Canada (2019)"
   - "/img/big-imgs/quebec-quebec.jpg" : "Quebec, QC, Canada (2019)"
   - "/img/big-imgs/quebec-park4.jpg" : "Quebec, QC, Canada (2019)"
   - "/img/big-imgs/quebec-park3.jpg" : "Quebec, QC, Canada (2019)"
-  - "/img/big-imgs/quebec-park2.jpg" : "Quebec, QC, Canada (2019)"
-  - "/img/big-imgs/quebec-mauricie.jpg" : "Mauricie National Park, QC, Canada (2019)"
 ---
 <!--  subtitle: Programmer / Aspiring Computer Scientist / AI Enthusiast
   subtitle: Programmer by Heart / Deep Learner through the Journey / Research Engineer in the Crystal Ball
