--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@ bigimg:
   - "/img/big-imgs/montenegro.jpg" : "Montenegro (2016)"
   - "/img/big-imgs/montenegro2.jpg" : "Montenegro (2016)"
   - "/img/big-imgs/france-beynes.jpg" : "My town, Beynes, France (2017)"
+  - "/img/big-imgs/france-touquet.jpg" : "Le Touquet, France (2017)"
+  - "/img/big-imgs/france-verdon.jpg" : "Verdon, France (2017)"
   - "/img/big-imgs/croatia-krka.jpg" : "Krka National Park, Croatia (2018)"
   - "/img/big-imgs/croatia-sun.jpg" : "Enjoying the sun in Croatia (2018)"
+  - "/img/big-imgs/croatia-bike.jpg" : "On the bike in Croatia (2018)"
   - "/img/big-imgs/croatia-korcula.jpg" : "Korčula Island, Croatia (2018)"
   - "/img/big-imgs/germany-berlin.jpg" : "Berlin, Germany (2019)"
   - "/img/big-imgs/quebec-cantons.jpg" : "Cantons de l'Est, QC, Canada (2019)"
