--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Hi, I'm Johan
-subtitle: Developper / Dreamer / Deep Learner
+subtitle: Developper, Dreamer, Deep Learner
 
 meta-title: "Johan Gras"
 meta-description: "Meta description"
@@ -23,12 +23,8 @@ bigimg:
   - "/img/big-imgs/quebec-montreal2.jpg" : "Montreal, QC, Canada (2019)"
   - "/img/big-imgs/quebec-montreal3.jpg" : "Montreal, QC, Canada (2019)"
   - "/img/big-imgs/quebec-quebec.jpg" : "Quebec, QC, Canada (2019)"
-  - "/img/big-imgs/quebec-park3.jpg" : "Quebec, QC, Canada (2019)"
+  - "/img/big-imgs/quebec-saguenay.jpg" : "Saguenay Fjord National Park, QC, Canada (2019)"
 ---
-<!--  subtitle: Programmer / Aspiring Computer Scientist / AI Enthusiast
-  subtitle: Programmer by Heart / Deep Learner through the Journey / Research Engineer in the Crystal Ball
-
-Let me introduce you...-->
 
 <div id="aboutme-section">
 
