--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: page
 title: Hi, I'm Johan
 subtitle: Developper, Dreamer, Deep Learner
 
-meta-title: "Johan Gras"
-meta-description: "Meta description"
+meta-title: "Hi, I'm Johan"
+meta-description: "My portfolio"
 css: "/css/aboutme.css"
 bigimg:
   - "/img/big-imgs/montenegro.jpg" : "Montenegro (2016)"
