--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@ css: "/css/aboutme.css"
 <p>You can either <a href="mailto:johan-gras@outlook.com?subject=Hello from johan-gras.github.io">email me</a>, find me on <a href="https://www.linkedin.com/in/johan-gras/">Linkedin</a>
   or <a href="https://twitter.com/gras_johan">Twitter</a> if you want to get in touch. I would love to help so don't hesitate to send a message!</p>
 
-<p>I'm currently <strong>looking for a job in the field of Machine Learning</strong>, so feel free to get in touch if you are looking for someone to fill your needs :)</p>
+<p>I'm currently <strong>looking for a job in Machine Learning</strong>, so feel free to get in touch if you are looking for someone to fill your needs :)</p>
 
 <form action="https://formspree.io/johan-gras@outlook.com" method="POST" class="form" id="contact-form">
   <p>You can also send me a quick message using the form below:</p>
