--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@ bigimg:
   
   <p class="about-text">
   <span class="fa fa-file-text-o about-icon"></span>
-  The <strong><a href="/projects">projects</a></strong> page is a nice place to see some of my work, but if you prefer you can also checkout my <a href="/resume">resume</a>. 
+  The <strong><a href="/projects">projects</a></strong> page is a nice place to see some of my work, but if you prefer you can also checkout my <a href="/CV_Johan_Gras.pdf">resume</a>. 
   </p>
   
   <p class="about-text">
   <span class="fa fa-globe about-icon"></span>
-  Born and raised in the <i>Paris area</i>; lived 6 months in <i>Montreal, Canada</i> for my Master internship; spend months travelling in <i>Europe</i> and <i>North America</i>.
+  Born and raised in the <i>Paris area</i>; lived for 6 months in <i>Montreal, Canada</i> for my Master internship; spend months travelling in <i>Europe</i> and <i>North America</i>.
   </p>
   
   </div>
