--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@ bigimg:
   <p class="about-text">
   
   <span class="fa fa-briefcase about-icon"></span>
-  Previously interned at <a href="https://www.thalesgroup.com/">Thales</a> (a French multinational in the aerospatial and defense industry), first as a <strong>software engineer</strong> and later as <strong>ML research scientist</strong>.
+  Previously interned at <a href="https://www.thalesgroup.com/">Thales</a> (a French multinational in the aerospace and defense industry), first as a <strong>software engineer</strong> and later as <strong>ML research scientist</strong>.
   </p>
   
   <p class="about-text">
   <span class="fa fa-graduation-cap about-icon"></span>
-  Obtained my MSc in <strong>Artificial Intelligence</strong> from the University of Cergy-Pontoise, France and my Bachelor of <strong>Computer Science</strong> from the
+  Obtained my MSc in <strong>Artificial Intelligence</strong> (in-major GPA 4.0 / 4.0) from the University of Cergy-Pontoise, France and my Bachelor of <strong>Computer Science</strong> from the
   University of Paris-Saclay. My master's project involved <a href="">solving a jigsaw puzzle using a model-based reinforcement learning algorithm</a>.
   </p>
   
