--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ bigimg:
   
   <p class="about-text">
   <span class="fa fa-graduation-cap about-icon"></span>
-  Obtained my MSc in <strong>Artificial Intelligence</strong> (in-major GPA 4.0 / 4.0) from the University of Cergy-Pontoise, France and my Bachelor of <strong>Computer Science</strong> from the
+  Obtained my MSc in <strong>Artificial Intelligence</strong> (4.0/4.0 in-major GPA) from the University of Cergy-Pontoise, France and my Bachelor of <strong>Computer Science</strong> from the
   University of Paris-Saclay. My master's project involved <a href="">solving a jigsaw puzzle using a model-based reinforcement learning algorithm</a>.
   </p>
   
