--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ bigimg:
   <p class="about-text">
   
   <span class="fa fa-briefcase about-icon"></span>
-  Previously interned at <a href="https://www.thalesgroup.com/">Thales</a> (a French multinational in the aerospace and defense industry), first as a <strong>software engineer</strong> and later as <strong>ML research scientist</strong>.
+  Previously interned at <a href="https://www.thalesgroup.com/">Thales</a> (a French multinational in the aerospace and defense industry), first as a <strong>software engineer</strong> and later as <strong>Deep Learning research scientist</strong>.
   </p>
   
   <p class="about-text">
@@ -55,7 +55,7 @@ bigimg:
   
   <p class="about-text">
   <span class="fa fa-file-text-o about-icon"></span>
-  The <strong><a href="/projects">projects</a></strong> page is a nice place to see some of my work, but if you prefer you can also checkout my <a href="/CV_Johan_Gras.pdf">resume</a>. 
+  The <strong><a href="/projects">projects</a></strong> page is a nice place to see some of my work, but if you prefer you can also checkout my <strong><a href="/CV_Johan_Gras.pdf">resume</a></strong>. 
   </p>
   
   <p class="about-text">
