--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ bigimg:
   <p class="about-text">
   
   <span class="fa fa-briefcase about-icon"></span>
-  Previously interned at <a href="https://www.thalesgroup.com/">Thales</a> (a French multinational in the aerospace and defense industry), first as a <strong>software engineer</strong> and later as <strong>research scientist</strong> focused on a Reinforcement Learning use case.
+  Previously interned at <a href="https://www.thalesgroup.com/">Thales</a> (a French multinational in the aerospace and defense industry), first as a <strong>software engineer</strong> and later as <strong>research scientist</strong>.
+  My final experience was exploring reinforcement learning based approach on flying assets.
   </p>
   
   <p class="about-text">
