--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ bigimg:
   
   <span class="fa fa-briefcase about-icon"></span>
   Previously interned at <a href="https://www.thalesgroup.com/">Thales</a> (a French multinational in the aerospace and defense industry), first as a <strong>software engineer</strong> and later as <strong>research scientist</strong>.
-  My final experience was exploring reinforcement learning based approach on flying assets.
+  My final experience put the focus on exploring reinforcement learning based approach on flying assets simulation.
   </p>
   
   <p class="about-text">
