--- a/projects/distill/index.html
+++ b/projects/distill/index.html
@@ -1,3 +1,10 @@
+---
+layout: page
+title: Article
+subtitle: "How can you stay in touch with me"
+css: "/css/aboutme.css"
+---
+
 <!doctype html>
 <meta charset="utf-8">
 <style>
