--- a/projects/distill/index.html
+++ b/projects/distill/index.html
@@ -1,8 +1,7 @@
 ---
-layout: page
+layout: default
 title: Article
 subtitle: "How can you stay in touch with me"
-css: "/css/aboutme.css"
 ---
 
 <!doctype html>
