--- a/projects/distill/index3.html
+++ b/projects/distill/index3.html
@@ -1,4 +1,6 @@
-
+---
+layout: page
+---
 
 <div style="text-align: center;">
 <video class="b-lazy" data-src="assets/mp4/learncartpole5.mp4" type="video/mp4" autoplay muted playsinline loop style="display: block; margin: auto; width: 100%;" ></video>
