--- a/projects/distill/index.html
+++ b/projects/distill/index.html
@@ -1,7 +1,17 @@
 ---
-layout: minimal
-title: Article
-subtitle: "How can you stay in touch with me"
+common-css:
+  - "/css/bootstrap.min.css"
+  - "/css/bootstrap-social.css"
+  - "/css/main.css"
+common-ext-css:
+  - "//maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css"
+common-googlefonts:
+  - "Lora:400,700,400italic,700italic"
+  - "Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
+common-js:
+  - "/js/jquery-1.11.2.min.js"
+  - "/js/bootstrap.min.js"
+  - "/js/main.js"
 ---
 
 <!doctype html>
@@ -171,10 +181,17 @@ dt-article figcaption b {
   title: "Learning to Predict Without Looking Ahead: World Models Without Forward Prediction"
   description: ""
 </script>
+
+{% include head.html %}
+
 <body>
 
+{% include gtm_body.html %}
+
+{% include nav.html %}
+
 <div style="text-align: center;">
-<video class="b-lazy" data-src="assets/mp4/learncartpole5.mp4" type="video/mp4" autoplay muted playsinline loop style="display: block; margin: auto; width: 100%;" ></video>
+<video class="b-lazy" data-src="/assets/mp4/learncartpole5.mp4" type="video/mp4" autoplay muted playsinline loop style="display: block; margin: auto; width: 100%;" ></video>
 </div>
 
 <dt-article id="dtbody">
