--- a/projects/distill/index.html
+++ b/projects/distill/index.html
@@ -1,18 +1,4 @@
----
-common-css:
-  - "/css/bootstrap.min.css"
-  - "/css/bootstrap-social.css"
-  - "/css/main.css"
-common-ext-css:
-  - "//maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css"
-common-googlefonts:
-  - "Lora:400,700,400italic,700italic"
-  - "Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
-common-js:
-  - "/js/jquery-1.11.2.min.js"
-  - "/js/bootstrap.min.js"
-  - "/js/main.js"
----
+
 
 <!doctype html>
 <meta charset="utf-8">
@@ -184,7 +170,7 @@ dt-article figcaption b {
 
 <body>
 
-
+{% include nav.html %}
 
 <div style="text-align: center;">
 <video class="b-lazy" data-src="/assets/mp4/learncartpole5.mp4" type="video/mp4" autoplay muted playsinline loop style="display: block; margin: auto; width: 100%;" ></video>
