--- a/projects/distill/index.html
+++ b/projects/distill/index.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 
+<div class="row">
+<div class="col col-12 col-lg-7">
+
 <div style="text-align: center;">
 <video class="b-lazy" data-src="assets/mp4/learncartpole5.mp4" type="video/mp4" autoplay muted playsinline loop style="display: block; margin: auto; width: 100%;" ></video>
 </div>
@@ -1004,3 +1007,6 @@ journal={Preprint arXiv:1401.4082},
 <script src="lib/blazy.js"></script>
 <script language="javascript" type="text/javascript" src="lib/jquery-1.12.4.min.js"></script>
 <script language="javascript" type="text/javascript" src="lib/controller.js"></script>
+
+</div>
+</div>
