--- a/projects/distill/index.html
+++ b/projects/distill/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="row">
-<div class="col col-12 col-lg-7">
+<div class="col col-12 col-lg-7 text-justify">
 
 <div style="text-align: center;">
 <video class="b-lazy" data-src="assets/mp4/learncartpole5.mp4" type="video/mp4" autoplay muted playsinline loop style="display: block; margin: auto; width: 100%;" ></video>
