--- a/projects/distill/index.html
+++ b/projects/distill/index.html
@@ -2,6 +2,15 @@
 layout: default
 ---
 
+<!--<script src="lib/jquery-1.12.4.min.js"></script>
+<script src="lib/mobile-detect.min.js"></script>-->
+<script src="lib/template.v1.js"></script>
+
+<script type="text/front-matter">
+  title: "Learning to Predict Without Looking Ahead: World Models Without Forward Prediction"
+  description: ""
+</script>
+
 <div class="row">
 <div class="col col-12 col-lg-7 text-justify">
 
