--- a/projects/distill/index.html
+++ b/projects/distill/index.html
@@ -28,7 +28,7 @@ Our agents are only given infrequent observations of the real environment. As a 
 
 <h2>Learning to Predict Without Looking Ahead:<br/>World Models Without Forward Prediction</h2>
 <p></p>
-<dt-byline class="l-page" id="authors_section" hidden>
+<dt-byline class="l-page" id="authors_section">
 <div class="byline">
   <div class="authors">
     <div class="author">
