--- a/projects/puzzlereassembly/index.html
+++ b/projects/puzzlereassembly/index.html
@@ -34,7 +34,7 @@ layout: default
 
 <h2>Puzzle Reassembly using Model Based Reinforcement Learning</h2>
 <p></p>
-<dt-byline class="l-page" id="authors_section" hidden>
+<dt-byline class="l-page" id="authors_section">
 <div class="byline">
   <div class="authors">
     <div class="author">
