--- a/projects/puzzlereassembly/index.html
+++ b/projects/puzzlereassembly/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Puzzle Reassembly using Model Based Reinforcement Learning
 ---
 
 <!--<script src="lib/jquery-1.12.4.min.js"></script>
