--- a/aboutme.html
+++ b/aboutme.html
@@ -27,6 +27,11 @@ Here we are 10 years later, I'm now deeply focused on implementing <strong>excit
 </p>
 
 <p class="about-text">
+<span class="fa fa-gamepad about-icon"></span>
+I have cofounded <a href="https://serverlobby.io/en">Serverlobby.io</a>...
+</p>
+
+<p class="about-text">
 <span class="fa fa-heart about-icon"></span>
 I'm addicted to demanding sports (Gym, Parkour, Obstacle Race, Ski and more), travelling, interacting with people,
  <a href="https://en.wikipedia.org/wiki/Comfort_zone">trying new things</a> and not to forget enjoying this life on earth :)
