--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@ bigimg:
   My journey started at 13, building a video game in C.
   Here we are 10 years later, I'm now deeply focused on implementing <strong>exciting deep learning algorithms!</strong>
   </p>
+
+  <p class="about-text">
+  <span class="fa fa-gamepad about-icon"></span>
+  I have cofounded <a href="https://serverlobby.io/en">Serverlobby.io</a>...
+  </p>
+
   
   <p class="about-text">
   <span class="fa fa-heart about-icon"></span>
