--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ bigimg:
 
   <p class="about-text">
   <span class="fa fa-gamepad about-icon"></span>
-  I have cofounded <a href="https://serverlobby.io/en">Serverlobby.io</a>...
+  I cofounded <a href="https://serverlobby.io/en">Serverlobby.io</a>, a webapp that helps owners of game servers to be promoted by creating and updating their own server page.
   </p>
 
   
