--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ bigimg:
 
   <p class="about-text">
   <span class="fa fa-gamepad about-icon"></span>
-  I cofounded <a href="https://serverlobby.io/en">Serverlobby.io</a>, a webapp that helps owners of game servers to be promoted by creating and updating their own server page.
+  I cofounded <a href="https://serverlobby.io/en">Serverlobby.io</a>, a website that helps owners of game servers be promoted by creating and updating their server page.
+After only a few months, Serverlobby generates more than a thousand monthly visitors.
   </p>
 
   
