--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ bigimg:
   </p>
 
   <p class="about-text">
-  <span class="fa fa-gamepad about-icon"></span>
+  <span class="fa fa-rocket about-icon"></span>
   I cofounded <a href="https://serverlobby.io/en">Serverlobby.io</a>, a website that helps owners of game servers be promoted by creating and updating their server page.
 After only a few months, Serverlobby generates more than a thousand monthly visitors.
   </p>
