--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@ bigimg:
 
   <p class="about-text">
   <span class="fa fa-rocket about-icon"></span>
-  I cofounded <a href="https://serverlobby.io/en">Serverlobby.io</a>, a website that helps owners of game servers be promoted by creating and updating their server page.
-After only a few months, Serverlobby generates more than a thousand monthly visitors.
+  <strong>I cofounded <a href="https://serverlobby.io/en">Serverlobby.io</a></strong>, a website that helps owners of game servers be promoted by creating and updating their server page. After only a few months, Serverlobby attracts <strong>more than a thousand monthly users</strong>.
   </p>
 
   
