--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ bigimg:
 
   <p class="about-text">
   <span class="fa fa-rocket about-icon"></span>
-  <strong>I cofounded <a href="https://serverlobby.io/en">Serverlobby.io</a></strong>, a website that helps owners of game servers be promoted by creating and updating their server page. After only a few months, <a href="https://serverlobby.io/en">Serverlobby</a> attracts <strong>more than a thousand monthly users</strong>.
+  <strong>I cofounded <a href="https://serverlobby.io/en">Serverlobby.io</a></strong>, a website that helps game server owners to be promoted by allowing them to create their server page. After only a few months, <strong><a href="https://serverlobby.io/en">Serverlobby</a> attracts more than a thousand monthly users</strong>.
   </p>
 
   
