--- a/aboutme.html
+++ b/aboutme.html
@@ -10,13 +10,13 @@ css: "/css/aboutme.css"
 <p class="about-text">
 
 <span class="fa fa-briefcase about-icon"></span>
-Previously interned at <a href="https://www.thalesgroup.com/">Thales</a> (a French multinational in the aerospatial and defense industry), first as a <strong>software engineer</strong> and later as <strong>ML research scientist</strong>.
+Currently a <strong>Machine Learning Engineer at Arm</strong> (Cambridge, UK) where I am an open source contributor to Google's TensorFlow library.
+Previously interned at <strong>Thales</strong> (a leading company in the aerospatial and defense industry) as a <strong>Research Engineer in Deep Learning</strong>.
 </p>
 
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
-Obtained my MSc in <strong>Artificial Intelligence</strong> from the University of Cergy-Pontoise, France and my Bachelor of <strong>Computer Science</strong> from the
-University of Paris-Saclay. My master's project involved <a href="">solving a jigsaw puzzle using a model-based reinforcement learning algorithm</a>.
+Obtained my MSc in <strong>Artificial Intelligence</strong> from ENSEA (a French grande école) and my Bachelor of <strong>Computer Science</strong> from the University of Paris-Saclay. My master's project involved <a href="">solving a jigsaw puzzle using a model-based reinforcement learning algorithm</a>.
 </p>
 
 <p class="about-text">
