--- a/aboutme.html
+++ b/aboutme.html
@@ -44,7 +44,7 @@ The <strong><a href="/projects">projects</a></strong> page is a nice place to se
 
 <p class="about-text">
 <span class="fa fa-globe about-icon"></span>
-Born and raised in the <i>Paris area</i>; lived 6 months in <i>Montreal, Canada</i> for my Master internship; spend months travelling in <i>Europe</i> and <i>North America</i>.
+Born and raised in the <i>Paris area</i>; lived 6 months in <i>Montreal, Canada</i> for my Master internship; currently living in <i>Cambridge, United Kingdom</i>; spend months travelling in <i>Europe</i> and <i>North America</i>.
 </p>
 
 </div>
